[package]
name = "master_of_dungeons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {version = "0.8.3", features = ["im", "svg", "image"]}
kurbo = "0.9.5"
image = "0.24.6"
im = "15.1.0"
tracing = "0.1.37"